<resources>
    <string name="app_name">Zmizelé krajiny Česka</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Digitální atlas zaniklých krajin</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_first_page">Úvod</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_list">Modelová území</string>
    <string name="menu_about">O aplikaci</string>
    <string name="menu_share">Sdílet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Text úvod-->
    <string name="uvod1">Vydejte se za poznáním zaniklých krajin ve vybraných lokalitách Česka.</string>
    <string name="uvod2">Aplikace Zmizelé krajiny Česka zpřístupňuje vybrané výstupy projektu Ministerstva kultury NAKI II "Dědictví zaniklých krajin: identifikace, rekonstrukce a zpřístupnění" z let 2018-2021.
Příjemcem projektu a zpracovatelem aplikace je Přírodovědecká fakulta Univerzity Karlovy.</string>

    <!-- Textové řetězce pro popis území -->
    <string name="boletice1">Vojenský výcvikový prostor (VVP) Boletice vznikl v roce 1947 jako nástupce vojenského výcvikového tábora Boletice. Vojenský újezd Boletice pak vznikl v roce 1950 jako zvlášť vyčleněné území pro potřeby obrany státu na ploše bezmála 220 km2 v oblasti Šumavské hornatiny a Šumavského podhůří na okrese Český Krumlov. Území je unikátní svou minimální hustotou zalidnění pouze 1,2 obyvatel na km2. Češi, kteří zde před válkou tvořili pouze 1% obyvatelstva, byli vysídleni po německém záboru českých pohraničních území v roce 1938. Německé etnikum bylo vysídleno po druhé světové válce v roce 1945. Většina dnešních obyvatel byla dosídlena později. Ve vojenském újezdu hospodaří státní podnik Vojenské lesy a statky ČR, divize Horní Planá.</string>
    <string name="boletice2">Původní krajina s převahou lesů a horského zemědělství se změnila v současnou krajinu, jejíž struktura je podřízena výcviku jednotek pozemních sil ve střelecké a taktické přípravě, v řízení vozidel a překonávání vodní překážky. Významným fenoménem území jsou stanoviště bezlesí na plochách, které byly dříve zemědělsky využívány. Nyní jsou plochy bezlesí v různém stupni sekundární sukcese udržovány vojenskou činností, která se projevuje mechanickým narušováním vegetace a povrchu půdy.</string>
    <string name="boletice3">Na cvičištích a střelnicích tak vznikla poměrně pestrá mozaika ploch od mokřadních stanovišť přes vlhké pcháčové louky a mezofilní stanoviště až k lesostepním xerotermním stanovištím. Vysoké přírodovědné hodnoty tohoto území vedly k vyhlášení rozsáhlé evropsky významné lokality Boletice a ptačí oblasti Boletice. Obě území jsou zařazena v síti chráněných území evropského významu NATURA 2000.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_google">googleActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="title_activity_googlemap">activityGooglemap</string>
    <string name="title_activity_maps_bol">mapsBol</string>


</resources>